--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
 name = "trade-generator"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "fx_trade_gen"
+path = "src/lib.rs"
+
+[[bin]]
+name = "fx_trade_gen"
+path = "src/bin/main.rs"
 
 [dependencies]
 rand = "0.8.5"
